tests/ui/invalid-harnesses/expected
error: only one '#[kani::proof]' attribute is allowed per harness\
invalid.rs:\
|\
| #[kani::proof]\
| ^^^^^^^^^^^^^^

error: functions used as harnesses cannot have any arguments\
invalid.rs:\
|\
| #[kani::proof]
| ^^^^^^^^^^^^^^

error: the `proof` attribute cannot be applied to generic functions\
invalid.rs:\
|\
| #[kani::proof]\
| ^^^^^^^^^^^^^^
